Encapsulate access to repositoryAccessStrategy and defaultPermissionsStrategy for subclasses
c.f. 5a785981